# ogl-engine

./: CMakeLists.txt  engine.cpp  engine.h  fragment.glsl  main.cpp  shader.cpp  shader.h  window.cpp  window.h
